fixed input vertical-align property

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3690,6 +3690,7 @@ input.sign-up__checkbox {
     width: 390px;
     margin-left: 20px;
     margin-bottom: 20px;
+    margin-top: 8px;
     min-height: 0;
   }
 
